Literally only bolded one thing

--- a/206_assignment_4.html
+++ b/206_assignment_4.html
@@ -506,7 +506,7 @@ Non-MPA
 </div>
 <div id="references" class="section level4">
 <h4>References</h4>
-<p><em>Reed D. 2019.</em> SBC LTER: Reef: Abundance, size and fishing effort for California Spiny Lobster (Panulirus interruptus), ongoing since 2012. Environmental Data Initiative. <a href="https://doi.org/10.6073/pasta/a593a675d644fdefb736750b291579a0" class="uri">https://doi.org/10.6073/pasta/a593a675d644fdefb736750b291579a0</a>. Dataset accessed 10/30/2019.</p>
+<p><strong>Reed D. 2019.</strong> SBC LTER: Reef: Abundance, size and fishing effort for California Spiny Lobster (Panulirus interruptus), ongoing since 2012. Environmental Data Initiative. <a href="https://doi.org/10.6073/pasta/a593a675d644fdefb736750b291579a0" class="uri">https://doi.org/10.6073/pasta/a593a675d644fdefb736750b291579a0</a>. Dataset accessed 10/30/2019.</p>
 </div>
 
 
